# homework-1

./: BrokenLine.cpp  BrokenLine.h  CMakeLists.txt  ClosedPolygonalChain.cpp  ClosedPolygonalChain.h  Point.cpp  Point.h  Polygon.cpp  Polygon.h  PolygonalChain.cpp  PolygonalChain.h  README.md  RegularPolygon.cpp  RegularPolygon.h  Regular_Polygon.cpp  Regular_Polygon.h  Trapezoid.cpp  Trapezoid.h  Triangle.cpp  Triangle.h  main.cpp  point.cpp  point.h
.github/workflows/: maindsa.yml
OOP-LR_ 1/: closedpolyline.cpp  closedpolyline.h  main.cpp  point.cpp  point.h  polygonal.cpp  polygonal.h  polyline.cpp  polyline.h  regularpolygon.cpp  regularpolygon.h  trapezoid.cpp  trapezoid.h  triangle.cpp  triangle.h
labs_src/: CMakeLists.txt
labs_src/lab1/: BrokenLine.cpp  BrokenLine.h  ClosedPolygon.cpp  ClosedPolygon.h  Point.cpp  Point.h  Polygon.cpp  Polygon.h  RegularPolygon.cpp  RegularPolygon.h  Trapezoid.cpp  Trapezoid.h  Triangle.cpp  Triangle.h  consolelog.cpp  lab1_functions.h  linestrip.cpp  linestrip.h  main.cpp  point.cpp  point.h  polygon.cpp  polygon.h  regularpolygon.cpp  regularpolygon.h  shape.h  trapezoid.cpp  trapezoid.h  triangle.cpp  triangle.h
labs_tests/: CMakeLists.txt  lab1_tests.cpp
